// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Progress/> Snapshot for Row component 1`] = `
<div
  className="progress mb-3"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow={80}
    className="progress-bar bg-primary"
    role="progressbar"
    style={
      Object {
        "width": "80%",
      }
    }
  />
</div>
`;

exports[`<Progress/> Snapshot for default Row component 1`] = `
<div
  className="progress mb-3"
>
  <div
    aria-valuemax="100"
    aria-valuemin="0"
    className="progress-bar undefined"
    role="progressbar"
    style={
      Object {
        "width": "undefined%",
      }
    }
  />
</div>
`;
